--- a/mixins/slotted-items-mixin/package.json
+++ b/mixins/slotted-items-mixin/package.json
@@ -26,10 +26,13 @@
   },
   "devDependencies": {
     "@bundled-es-modules/chai": "^4.2.2",
+    "@open-wc/dedupe-mixin": "^1.2.17",
+    "@open-wc/scoped-elements": "^1.1.1",
     "@open-wc/testing-helpers": "^1.2.1",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@vaadin/test-helpers": "^0.1.5",
+    "mocha": "^7.2.0",
     "typescript": "^3.9.5",
     "web-test-runner": "^0.0.34"
   },
