--- a/mixins/roving-tabindex-mixin/package.json
+++ b/mixins/roving-tabindex-mixin/package.json
@@ -27,9 +27,7 @@
   },
   "devDependencies": {
     "@bundled-es-modules/chai": "^4.2.2",
-    "@open-wc/dedupe-mixin": "^1.2.17",
-    "@open-wc/scoped-elements": "^1.1.1",
-    "@open-wc/testing-helpers": "^1.2.1",
+    "@open-wc/testing-helpers": "1.7.2",
     "@vaadin/test-helpers": "^0.1.5",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
