--- a/mixins/slotted-items-mixin/package.json
+++ b/mixins/slotted-items-mixin/package.json
@@ -26,9 +26,7 @@
   },
   "devDependencies": {
     "@bundled-es-modules/chai": "^4.2.2",
-    "@open-wc/dedupe-mixin": "^1.2.17",
-    "@open-wc/scoped-elements": "^1.1.1",
-    "@open-wc/testing-helpers": "^1.2.1",
+    "@open-wc/testing-helpers": "1.7.2",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/sinon": "^9.0.0",
