--- a/mixins/direction-mixin/package.json
+++ b/mixins/direction-mixin/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "wtr test/*.test.js --preserve-symlinks"
+    "test": "wtr test/*.test.js"
   },
   "dependencies": {
     "@vaadin/mixin-utils": "^0.1.0",
@@ -28,9 +28,7 @@
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@web/test-runner": "^0.2.5",
-    "@web/test-runner-framework": "^0.1.0",
     "@web/test-runner-mocha": "^0.1.0",
-    "mocha": "^7.2.0",
     "typescript": "^3.9.5"
   },
   "publishConfig": {
