--- a/mixins/resizable-mixin/package.json
+++ b/mixins/resizable-mixin/package.json
@@ -18,7 +18,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "wtr test/*.test.js --preserve-symlinks"
+    "test": "wtr test/*.test.js"
   },
   "dependencies": {
     "@vaadin/direction-mixin": "^0.1.1",
@@ -29,14 +29,12 @@
   },
   "devDependencies": {
     "@bundled-es-modules/chai": "^4.2.2",
-    "@open-wc/testing-helpers": "1.7.2",
+    "@open-wc/testing-helpers": "^1.8.0",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/sinon": "^9.0.0",
     "@web/test-runner": "^0.2.5",
-    "@web/test-runner-framework": "^0.1.0",
     "@web/test-runner-mocha": "^0.1.0",
-    "mocha": "^7.2.0",
     "sinon": "^9.0.1",
     "typescript": "^3.9.5"
   },
