--- a/components/split-layout/package.json
+++ b/components/split-layout/package.json
@@ -29,7 +29,7 @@
   ],
   "scripts": {
     "build": "tsc && replace-in-file \"/(import|from)( '[.]+/)(.*)(?<!.js)(';)/g\" \"\\$1\\$2\\$3.js\\$4\" vaadin-*.{js,d.ts},src/*.{js,d.ts},theme/**/*.{js,d.ts} --isRegex --verbose",
-    "test": "wtr test/unit/*.js"
+    "test": "wtr test/unit/*.test.ts"
   },
   "dependencies": {
     "@vaadin/down-up-mixin": "^0.1.1",
@@ -52,8 +52,9 @@
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/sinon": "^9.0.0",
-    "@web/test-runner": "^0.5.7",
-    "@web/test-runner-mocha": "^0.2.3",
+    "@web/dev-server-esbuild": "^0.0.3",
+    "@web/test-runner": "^0.5.20",
+    "@web/test-runner-mocha": "^0.2.5",
     "sinon": "^9.0.1",
     "replace-in-file": "^5.0.2",
     "typescript": "^3.9.5"
