--- a/mixins/control-state-mixin/package.json
+++ b/mixins/control-state-mixin/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "wtr test/*.test.js"
+    "test": "wtr test/*.test.ts"
   },
   "dependencies": {
     "@vaadin/disabled-state-mixin": "^0.1.1",
@@ -34,8 +34,9 @@
     "@types/mocha": "^7.0.2",
     "@types/sinon": "^9.0.0",
     "@vaadin/test-helpers": "^0.1.5",
-    "@web/test-runner": "^0.5.7",
-    "@web/test-runner-mocha": "^0.2.3",
+    "@web/dev-server-esbuild": "^0.0.3",
+    "@web/test-runner": "^0.5.20",
+    "@web/test-runner-mocha": "^0.2.5",
     "sinon": "^9.0.1",
     "typescript": "^3.9.5"
   },
