--- a/mixins/element-base/package.json
+++ b/mixins/element-base/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "wtr test/*.test.js"
+    "test": "wtr test/*.test.ts"
   },
   "dependencies": {
     "@polymer/polymer": "^3.2.0",
@@ -33,8 +33,9 @@
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
     "@types/sinon": "^9.0.0",
-    "@web/test-runner": "^0.5.7",
-    "@web/test-runner-mocha": "^0.2.3",
+    "@web/dev-server-esbuild": "^0.0.3",
+    "@web/test-runner": "^0.5.20",
+    "@web/test-runner-mocha": "^0.2.5",
     "sinon": "^9.0.1",
     "typescript": "^3.9.5"
   },
