--- a/mixins/mixin-utils/package.json
+++ b/mixins/mixin-utils/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "wtr test/*.test.js"
+    "test": "wtr test/*.test.ts"
   },
   "dependencies": {
     "lit-element": "^2.3.0",
@@ -26,8 +26,9 @@
     "@bundled-es-modules/chai": "^4.2.2",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
-    "@web/test-runner": "^0.5.7",
-    "@web/test-runner-mocha": "^0.2.3",
+    "@web/dev-server-esbuild": "^0.0.3",
+    "@web/test-runner": "^0.5.20",
+    "@web/test-runner-mocha": "^0.2.5",
     "typescript": "^3.9.5"
   },
   "publishConfig": {
