--- a/mixins/track-event-mixin/package.json
+++ b/mixins/track-event-mixin/package.json
@@ -16,7 +16,7 @@
   ],
   "scripts": {
     "build": "tsc",
-    "test": "wtr test/*.test.js"
+    "test": "wtr test/*.test.ts"
   },
   "dependencies": {
     "@vaadin/browser-utils": "^0.1.1",
@@ -29,8 +29,9 @@
     "@open-wc/testing-helpers": "^1.8.0",
     "@types/chai": "^4.2.11",
     "@types/mocha": "^7.0.2",
-    "@web/test-runner": "^0.5.7",
-    "@web/test-runner-mocha": "^0.2.3",
+    "@web/dev-server-esbuild": "^0.0.3",
+    "@web/test-runner": "^0.5.20",
+    "@web/test-runner-mocha": "^0.2.5",
     "typescript": "^3.9.5"
   },
   "publishConfig": {
